repo_template/templates/hub/http-ingress.yaml
apiVersion: networking.k8s.io/v1 ##Enklare variant, http
kind: Ingress
metadata:
  name: balsam-http-ingress 
  namespace: balsam-system
  annotations:
    cert-manager.io/cluster-issuer: ${CA_ISSUER}
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - hosts:
      - balsam-ui-${HUB_DOMAIN}
    secretName: ${HUB_NAME}-balsam-ui-certificate
  rules:
  - host: balsam-ui-${HUB_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: balsam-ui-service
            port:
              number: 80
